<resources>
    <string name="app_name">IntelliCube</string>
    <string name="play_button">Play the rubik</string>
    <string name="test_string">Test</string>


    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>

    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="expand_mode_settings">展开模式设置</string>
    <string name="retrieve_mode_settings">收起模式设置</string>

    <string name="game">魔方游戏</string>
    <string name="sensor">智能魔方</string>
    <string name="alarm">魔方闹钟</string>
    <string name="demo">演示模式</string>

    <string name="connect_fail">连接失败</string>
    <string name="active_disconnected">断开了</string>
    <string name="disconnected">连接断开</string>
    <string name="please_open_blue">请先打开蓝牙</string>
    <string name="select_operation_type">选择操作类型</string>
    <string name="characteristic">特性</string>
    <string name="data_changed">的数据变化：</string>
    <string name="read">读</string>
    <string name="write">写</string>
    <string name="open_notification">打开通知</string>
    <string name="close_notification">关闭通知</string>
    <string name="service_list">服务列表</string>
    <string name="characteristic_list">特征列表</string>
    <string name="console">操作控制台</string>
    <string name="name">设备广播名：</string>
    <string name="mac">MAC:</string>
    <string name="service">服务</string>
    <string name="type">服务类型(主服务)</string>
    <string name="scan_setting">请选择模式</string>
    <string name="setting_name">输入蓝牙设备广播名，多个之间以英文逗号隔开</string>
    <string name="setting_mac">输入蓝牙设备mac地址</string>
    <string name="setting_uuid">输入蓝牙设备UUID，多个之间以英文逗号隔开</string>
    <string name="input_hex">请输入HEX格式指令</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开连接</string>
    <string name="enter">进入操作</string>

    <string name="cube_start">开始</string>
    <string name="cube_stop">停止</string>
    <string name="cube_reset">重置</string>
    <string name="scramble">打乱</string>
    <string name="cube_save">保存状态</string>
    <string name="cube_restore">提取状态</string>
    <string name="no_valid_state">无可用状态</string>

    <!--alarm-->
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wed">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sat">周六</string>
    <string name="sun">周日</string>
    <string name="cycle_sure">确定</string>
    <string name="vibration">震动</string>
    <string name="ring">铃声</string>
    <string name="cube_solve">还原</string>
    <string name="after10">10s之后</string>

</resources>
